# idlocator

./: .dockerignore  .firebaserc  .gitignore  Dockerfile  README.md  deploy.bat  firebase.json  index.html  pyproject.toml  requirements.txt  sample_people_20 (1).xlsx
data/: people_template.csv  sample_people.csv
idlocator/: __init__.py  cli.py  models.py  repository.py  service.py  soundex.py
idlocator/data/: sample_people_20.csv
idlocator/web/: app.py  index.html
tests/: test_service.py
tests/ui/: test_cli_ui.py  test_web_ui.py
