[project]
name = "idlocator"
version = "0.1.0"
description = "כלי לאיתור זהות לפי כתובת ותעודת זהות עם תמיכה ב-Soundex"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["soundex", "identity", "address"]
authors = [{ name = "Your Name" }]
dependencies = [
    "Flask>=3.0,<4.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["idlocator*"]
